tests/baselines/reference/parserAmbiguity1.errors.txt
==== tests/cases/compiler/parserAmbiguity1.ts (2 errors) ====
    f(g<A, B>(7));
    ~
!!! parserAmbiguity1.ts(1,1): error TS2095: Cannot find name 'f'.
      ~
!!! parserAmbiguity1.ts(1,3): error TS2095: Cannot find name 'g'.